<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:paddingBottom="8dp"
            android:layout_marginRight="10dp"
            android:paddingTop="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/molengo"
                android:text="@string/toy_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/molengo"
                android:text="@string/company"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/molengo"
                android:text="@string/description"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:text="@string/company_price"
                android:textAlignment="viewEnd"
                android:textColor="#3A87B7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addSelect"
                android:layout_width="69dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@drawable/button_background"
                android:text="Buy"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>